Update Bedtools requirements

--- a/INSTALL
+++ b/INSTALL
@@ -8,6 +8,7 @@ To install please make sure you have the following requirements
 Requirements
 -------------
 samtools-0.1.19
+bedtools
 
 If you don't have this version of samtools installed please follow steps below to install and add to path. Otherwise skip to the next step.
 
